Fix floating atc button mobile z-index

--- a/src/css/_sections/product/_product-form.scss
+++ b/src/css/_sections/product/_product-form.scss
@@ -3,7 +3,7 @@
 		position: fixed;
 		bottom: 0;
 		left: 0;
-		z-index: 99;
+		z-index: 101;
 		width: 100%;
 		padding: 32px;
 
